--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,35 @@
 {% extends 'layout.html' %}
 {%block stylesheets%}
+<link href="/css/superslides.css" rel="stylesheet">
 {%endblock%}
 
 {% block content %}
-<h1>Index</h1>
+<div id="slides">
+    <div class="slides-container">
+        <img src="http://placehold.it/350x150" alt="Cinelli">
+        <img src="http://placehold.it/350x150" width="1024" height="682" alt="Surly">
+        <img src="http://placehold.it/350x150" width="1024" height="683" alt="Cinelli">
+        <img src="http://placehold.it/350x150" width="1024" height="685" alt="Affinity">
+    </div>
+
+    <nav class="slides-navigation">
+        <a href="#" class="next"><span class="fa fa-chevron-right"></span></a>
+        <a href="#" class="prev"><span class="fa fa-chevron-left"></span></a>
+    </nav>
+</div>
 {%endblock%}
 
 {%block scripts%}
+<script src="/scripts/jquery.easing.1.3.js"></script>
+<script src="/scripts/jquery.animate-enhanced.min.js"></script>
+<script src="/scripts/jquery.superslides.min.js"></script>
+<script>
+    $(function() {
+        $('#slides').superslides({
+            hashchange: true
+        });
+    });
+</script>
+
 {%endblock%}
 
