--- a/views/layout.html
+++ b/views/layout.html
@@ -10,6 +10,7 @@
     {%block stylesheets%}{% endblock%}
     <link href="/css/datasparks.css" rel="stylesheet">
     <link href="/css/iconfonts.css" rel="stylesheet">
+    <link href="/css/font-awesome.min.css" rel="stylesheet">
     <link rel="icon" href="/images/favicons/favicon.ico?v=2">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
